--- a/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.html
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.html
@@ -1,19 +1,16 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start" *ngIf="defaultParenUrl !== 'isHome'">
-      <ion-back-button [defaultHref]="defaultParenUrl"></ion-back-button>
+      <ion-back-button [defaultHref]="defaultParenUrl"></ion-back-button> 
     </ion-buttons>
     <ion-title>
       <div class="title">{{titre}}</div>
     </ion-title>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+    <ion-buttons slot="end">
       <ion-chip>
-        <ion-avatar>
-          <img src="assets/images/icon_test_user.jpg">
-        </ion-avatar>
         <ion-badge>{{'pompiste'}}</ion-badge>
       </ion-chip>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
