--- a/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.scss
@@ -25,10 +25,13 @@ ion-content {
         }
         padding-bottom: 10px;
     }
-
-    .button {
-        background: darkcyan;
-        color: white;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
+.button{
+    background: darkcyan;
+    border-radius: 5px;
+    padding: 0.7rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    font-size: 0.8rem;
+    cursor: pointer;
+}
 }
