--- a/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.scss
@@ -47,5 +47,16 @@
             width: 10rem;
         }
     }
+
+
+.button{
+    background-color: #0055a4;
+    border-radius: 5px;
+    padding: 0.7rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #e2dfdf;
+    font-size: 0.8rem;
+    cursor: pointer;
+}
 }
 
