--- a/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.scss
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.scss
@@ -16,5 +16,14 @@ ion-toolbar {
             font-size: 8px;
             background: borwn;
         }
-    }   
+    } 
+    .button{
+        padding:0;
+        font-family: Lato;
+        text-transform: uppercase;
+        font-size: 8px;
+        background: none;
+        display: flex;
+    }
+    
 }
