--- a/src/app/VIEWS/PAGES/LOGGED/login-register/login-register.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/login-register/login-register.page.scss
@@ -26,4 +26,15 @@
         border-radius: 5px;
 }
 
+
+.button{
+    background-color: #0055a4;
+    border-radius: 5px;
+    padding: 0.7rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #e2dfdf;
+    font-size: 0.8rem;
+    cursor: pointer;
+}
+
 }
