--- a/src/app/VIEWS/PAGES/METIERS/distribution/distribution.page.html
+++ b/src/app/VIEWS/PAGES/METIERS/distribution/distribution.page.html
@@ -1,11 +1,9 @@
 <app-header [titre]="'DISTRIBUTION'" [soustitre]="'le sous-titre de la page'" [defaultParenUrl]="defaultParentUrl">
   </app-header>
-  
   <ion-content>
     <h4>Nouvelle Distribution</h4>
     <div class="container">
       <form class="form-block">
-        <div class ="row">
           <div>
             <ion-label>Pompe:</ion-label>
             <div class="form-group">
@@ -22,17 +20,16 @@
                 </ion-select-option>
               </ion-select>
           </div>
-            </div>
-            <div>
-                <ion-label>Shift:</ion-label>
-                <div class="form-group" >
-                  <ion-select (ionChange)="onShiftSelected()" name="shift" [(ngModel)]="hoursAvailable" placeholder="Shift">
-                    <ion-select-option> NUIT </ion-select-option>
-                    <ion-select-option> JOUR </ion-select-option>
-                  </ion-select>
-                </div>
-            </div>
-        </div>
+          </div>
+          <div>
+              <ion-label>Shift:</ion-label>
+              <div class="form-group" >
+                <ion-select (ionChange)="onShiftSelected()" name="shift" [(ngModel)]="hoursAvailable" placeholder="Shift">
+                  <ion-select-option> NUIT </ion-select-option>
+                  <ion-select-option> JOUR </ion-select-option>
+                </ion-select>
+              </div>
+          </div>
         <div>
           <ion-label>Types de Carburant</ion-label>
           <div class="form-group">
@@ -43,40 +40,36 @@
                 </ion-select>
           </div>
         </div>
-        <div class="row">
-            <div>
-              <ion-label>Compartiment:</ion-label>
-              <div class="form-group">
-                  <ion-select class="form-select"
-                            (ionChange)="fullFieldCompartment()"
-                            name="vehicule"
-                            [(ngModel)]="compartment"
-                            placeholder="Choisir">
-                      <ion-select-option [value]="compartment" *ngFor="let compartment of listCompartment">
-                        <p></p><br>
-                        <p></p>
-                      </ion-select-option>
-                    </ion-select>
-              </div>
-              
-            </div>
-            <div>
-              <ion-label>Type d'opération :</ion-label>
-              <div class="form-group">
-                <ion-select class="form-select"
-                          (ionChange)="fullFieldOperationType()"
-                          name="operationType"
-                          [(ngModel)]="operationType"
-                          placeholder="Choisir">
-                    <ion-select-option [value]="operation" *ngFor="let operation of ListOperations">
-                      <p></p><br>
-                      <p></p>
-                    </ion-select-option>
-                  </ion-select>
-              </div>
+        <div>
+          <ion-label>Compartiment:</ion-label>
+          <div class="form-group">
+            <ion-select class="form-select"
+                      (ionChange)="fullFieldCompartment()"
+                      name="vehicule"
+                      [(ngModel)]="compartment"
+                      placeholder="Choisir">
+                <ion-select-option [value]="compartment" *ngFor="let compartment of listCompartment">
+                  <p></p><br>
+                  <p></p>
+                </ion-select-option>
+              </ion-select>
+          </div>
+          </div>
+          <div>
+            <ion-label>Type d'opération:</ion-label>
+            <div class="form-group">
+              <ion-select class="form-select"
+                        (ionChange)="fullFieldOperationType()"
+                        name="operationType"
+                        [(ngModel)]="operationType"
+                        placeholder="Choisir">
+                  <ion-select-option [value]="operation" *ngFor="let operation of ListOperations">
+                    <p></p><br>
+                    <p></p>
+                  </ion-select-option>
+                </ion-select>
             </div>
           </div>
-        <div class="row">
           <div>
             <ion-label>Véhicule:</ion-label>
             <div class="form-group">
@@ -91,57 +84,56 @@
                     </ion-select-option>
                   </ion-select>
             </div>
-            
           </div>
+        <div class="row">
           <div>
             <ion-label>Chauffeur :</ion-label>
             <div class="form-group">
                 <ion-input name="chauffeur" disabled [placeholder]="chauffeurName"></ion-input>
             </div>
           </div>
+          <div>
+              <ion-label>Ancienne Distance :</ion-label>
+              <div class="form-group">
+                <ion-input type="numeric" name="oldDistance" [(ngModel)]="oldDistance"></ion-input>
+              </div>
+            </div>
         </div>
         <div class="row">
             <div>
-                <ion-label>Ancienne Distance :</ion-label>
-                <div class="form-group">
-                  <ion-input type="numeric" name="oldDistance" [(ngModel)]="oldDistance"></ion-input>
-                </div>
+              <ion-label>ouvelle Distance :</ion-label>
+              <div class="form-group">
+                <ion-input type="numeric" name="newDistance" [(ngModel)]="newDistance"></ion-input>
               </div>
+            </div>
             <div>
-                <ion-label>ouvelle Distance :</ion-label>
-                <div class="form-group">
-                  <ion-input type="numeric" name="newDistance" [(ngModel)]="newDistance"></ion-input>
-                </div>
+              <ion-label>Mesure / début :</ion-label>
+              <div class="form-group">
+                <ion-input type="numeric"  name="startIndex" [(ngModel)]="startIndex"></ion-input>
               </div>
+            </div>
         </div>
         <div class="row">
-            <div>
-                <ion-label>Mesure / début :</ion-label>
-                <div class="form-group">
-                  <ion-input type="numeric"  name="startIndex" [(ngModel)]="startIndex"></ion-input>
-                </div>
-              </div>
-              <div>
-                  <ion-label>Mesure / Fin :</ion-label>
-                  <div class="form-group">
-                    <ion-input type="numeric" name="endIndex" [(ngModel)]="endIndex"></ion-input>
-                  </div>
-              </div>
-              <div>
-                <ion-label>Dépensé :</ion-label>
-                <div class="form-group">
-                  <ion-input type="numeric" name="mesure" disabled [placeholder]="mesure"></ion-input>
-                </div>
-              </div>
+          <div>
+            <ion-label>Mesure / Fin :</ion-label>
+            <div class="form-group">
+              <ion-input type="numeric" name="endIndex" [(ngModel)]="endIndex"></ion-input>
+            </div>
+          </div>
+          <div>
+            <ion-label>Dépensé :</ion-label>
+            <div class="form-group">
+              <ion-input type="numeric" name="mesure" disabled [placeholder]="mesure"></ion-input>
+            </div>
+          </div>
         </div>
         <div class="row">
-                <div class="button"> 
-                  <ion-icon  name="photo"></ion-icon>Ajouter une Photo
-                </div>
-              
-              <button disabled="true" class="validate">
-                <div (click)="processStoreConsomation()">Valider Opération</div>
-              </button>
+          <div class="button"> 
+            <ion-icon  name="photo"></ion-icon>Ajouter une photo
+          </div>
+          <button disabled="true" class="validate">
+            <div (click)="processStoreConsomation()">Valider Opération</div>
+          </button>
         </div>
         
       </form>
