--- a/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.html
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.html
@@ -5,12 +5,18 @@
     </ion-buttons>
     <ion-title>
       <div class="title">{{titre}}</div>
+      <div class="subtitle">Le lorem Ipsum Dolor </div>
     </ion-title>
     <ion-buttons slot="end">
-      <ion-chip>
-        <ion-badge>{{'pompiste'}}</ion-badge>
-      </ion-chip>
+      <ion-badge>{{'pompiste'}}</ion-badge>
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <div class="decoration">
+      <img class="logo-etse" src="assets/icon/logo.jpg">
+      <div class="icon-type-user">
+        <img src="assets/images/fuel.svg">
+      </div>
+    </div>
   </ion-toolbar>
+  
 </ion-header>
