--- a/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.css
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.css
@@ -1,16 +1,69 @@
-ion-toolbar ion-title .title {
-  font-size: 14px;
-  text-transform: uppercase;
-  font-family: Lato;
+ion-header {
+  background: #3e3636;
 }
-ion-toolbar ion-title .subtitle {
-  font-size: 10px;
+ion-toolbar {
+  --background: #3e3636;
+  position: relative;
+  height: 60px;
 }
-ion-toolbar ion-title ion-badge {
+ion-toolbar ion-buttons {
+  align-items: flex-start;
+}
+ion-toolbar ion-buttons ion-badge {
   padding-left: 15px;
   padding-right: 15px;
   font-family: Lato;
   text-transform: uppercase;
   font-size: 8px;
-  background: borwn;
+  background: #0f5861;
+}
+ion-toolbar ion-buttons ion-menu-button {
+  margin-top: -17px;
+}
+ion-toolbar .decoration {
+  position: absolute;
+  right: -5%;
+  width: 60%;
+  height: 100%;
+  background: #ffd31a;
+  top: 0;
+  transform: skew(-47deg);
+}
+ion-toolbar .decoration .icon-type-user {
+  position: absolute;
+  left: 23%;
+  top: 21%;
+  height: 1rem;
+  width: 1rem;
+  transform: skew(46deg);
+}
+ion-toolbar .decoration .icon-type-user img {
+  height: 100%;
+  width: 100%;
+}
+ion-toolbar .decoration .logo-etse {
+  position: absolute;
+  border: 1.5px solid #e0730a;
+  border-radius: 50%;
+  top: 9%;
+  left: -7%;
+  height: 2rem;
+  width: 2rem;
+  transform: skew(47deg);
+}
+ion-toolbar ion-title {
+  text-align: left;
+  padding-inline-start: 15px;
+  margin-bottom: 15px;
+}
+ion-toolbar ion-title .title {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+ion-toolbar ion-title .subtitle {
+  font-size: 9px;
+  font-family: raleway;
+  color: white;
 }
