--- a/src/app/VIEWS/PAGES/LOGGED/login-register/login-register.page.css
+++ b/src/app/VIEWS/PAGES/LOGGED/login-register/login-register.page.css
@@ -5,8 +5,80 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  background: #dfdfdf;
+}
+.container-log-page .copiright-block {
+  width: 100%;
+  color: gray;
+  text-align: center;
+  margin-top: 0%;
+  font-size: 11px;
+}
+.container-log-page .decorate {
+  position: absolute;
+  top: 0;
+  height: 55%;
+  width: 100%;
+  background: #3e3636;
+  z-index: 0;
+}
+.container-log-page .logoBLock {
+  width: 7rem;
+  height: 7rem;
+  border-radius: 8px;
+  margin-bottom: 30px;
+  animation: downdown;
+  animation-duration: 1s;
+  z-index: 1;
+  overflow: hidden;
+  transition: 400ms;
+}
+.container-log-page .logoBLock img {
+  width: 100%;
+  object-fit: contain;
 }
 .container-log-page ion-card {
+  z-index: 1;
   text-align: center;
-  width: 23rem;
+  padding: 1rem;
+  width: 21rem;
+  background: white;
+}
+.container-log-page ion-card ion-card-header ion-card-title {
+  text-align: left;
+}
+.container-log-page ion-card ion-card-header .border-title {
+  width: 22%;
+  border-bottom: 3.5px solid #f6943d;
+}
+.container-log-page ion-card ion-card-content ion-button {
+  --background: linear-gradient(to bottom, #0261b9 0%, #011c36 100%);
+  font-family: Lato;
+  font-weight: bold;
+  width: 93%;
+}
+.container-log-page ion-card ion-card-content ion-input ion-icon {
+  position: absolute;
+  right: 2%;
+  font-size: 1.5rem;
+}
+.container-log-page ion-item {
+  border-color: #e2dfdf;
+  border: 1px solid #e2dfdf !important;
+  border-radius: 5px;
+  margin: 1rem;
+}
+.container-log-page ion-item ion-label {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: dimgrey;
+  font-size: 1.2rem;
+}
+@keyframes downdown {
+  from {
+    margin-bottom: 122px;
+  }
+  to {
+    margin-bottom: 30px;
+  }
 }
