--- a/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.css
+++ b/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.css
@@ -1,20 +1,41 @@
-.container {
+ion-content {
+  --background: #dfdfdf;
+}
+ion-content .container {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 3rem;
+  position: relative;
 }
-.container .cadran-buttn {
+ion-content .container h5 {
+  font-family: raleway;
+}
+ion-content .container .blog-img {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 3%;
+  border: 3px solid darkgoldenrod;
+}
+ion-content .container .blog-img img {
   width: 100%;
+  height: 100%;
+}
+ion-content .container .cadran-buttn {
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background: #3e3636;
+  padding: 0.5rem;
+  border-top-left-radius: 20px;
 }
-.container .cadran-buttn .cadran {
+ion-content .container .cadran-buttn .cadran {
   width: 35px;
   height: 35px;
   background: rgba(218, 216, 216, 0.932);
@@ -25,29 +46,37 @@
   align-items: center;
   padding: 7px;
 }
-.container .button-carried {
-  width: 100%;
+ion-content .container .button-carried {
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0.5rem;
+  background: #3e3636;
+  margin-top: 1px;
+  border-bottom-right-radius: 20px;
+  padding-bottom: 0.8rem;
 }
-.container .button-carried .block-3 {
+ion-content .container .button-carried .block-3 {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 5px;
 }
-.container .button-action {
-  width: 100%;
+ion-content .container .button-carried .block-3 .button-box {
+  width: 6rem;
+  height: 6rem;
+  color: white;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: auto;
-}
-.container .button-action ion-button {
-  width: 10rem;
+  font-size: 1.5rem;
+  font-family: Lato;
+  text-transform: uppercase;
+  margin: 0.2rem;
+  background: #b5b5b5;
+  border-bottom-right-radius: 15px;
 }
