--- a/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.scss
@@ -1,68 +1,86 @@
-.container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 3rem;
-    .cadran-buttn {
+ion-content {
+    --background:#3e3636;
+    .container {
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        .cadran {
-            width: 35px;
-            height: 35px;
-            background:rgba(218, 216, 216, 0.932);
-            margin: 0.5rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 7px;
-
-        }
-    }
-    .button-carried {
-        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        .block-3 {
-            width: 100%;
+        position: relative;
+        h5 {
+            font-family: raleway;
+            color: white;
+        }
+
+        .blog-img {
+            width: 6rem;
+            height: 6rem;
+            border-radius: 50%;
+            overflow: hidden;
+            margin-bottom: 3%;
+            border: 3px solid darkgoldenrod;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .cadran-buttn {
+            width: 80%;
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            margin-top: 5px;
-           
+            .cadran {
+                width: 35px;
+                background: rgba(218, 216, 216, 0.932);
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin-right: 6px;
+                border-bottom: 2px solid #f79c46;
+                div {
+                    transition: 200ms;
+                }
+
+            }
+        }
+
+        .button-carried {
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 0.5rem;
+            background: #3e3636;
+            margin-top: 1px;
+            border-bottom-right-radius: 20px;
+            padding-bottom: 0.8rem;
+            .block-3 {
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                .button-box {
+                    width: 5rem;
+                    height: 5rem;
+                    color: white;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.5rem;
+                    font-family: Lato;
+                    text-transform: uppercase;
+                    margin: 0.2rem;
+                    border-radius: 50%;
+                    background: #8e89894f;
+                }
+            }
         }
     }
-    .button-action {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        margin: auto;
-        ion-button {
-            width: 10rem;
-        }
-    }
-
-
-.button{
-    background-color: #0055a4;
-    border-radius: 5px;
-    padding: 0.7rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #e2dfdf;
-    font-size: 0.8rem;
-    cursor: pointer;
 }
-}
-
-
