--- a/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.css
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/header/header.component.css
@@ -1,15 +1,17 @@
 ion-header {
   background: #3e3636;
+  height: 40px;
+  overflow: hidden;
 }
-ion-toolbar {
+ion-header ion-toolbar {
   --background: #3e3636;
   position: relative;
-  height: 60px;
+  padding-top: unset;
 }
-ion-toolbar ion-buttons {
+ion-header ion-toolbar ion-buttons {
   align-items: flex-start;
 }
-ion-toolbar ion-buttons ion-badge {
+ion-header ion-toolbar ion-buttons ion-badge {
   padding-left: 15px;
   padding-right: 15px;
   font-family: Lato;
@@ -17,52 +19,50 @@ ion-toolbar ion-buttons ion-badge {
   font-size: 8px;
   background: #0f5861;
 }
-ion-toolbar ion-buttons ion-menu-button {
+ion-header ion-toolbar ion-buttons ion-menu-button {
   margin-top: -17px;
 }
-ion-toolbar .decoration {
+ion-header ion-toolbar .decoration {
   position: absolute;
-  right: -5%;
-  width: 60%;
+  right: 0;
+  width: 50%;
   height: 100%;
   background: #ffd31a;
   top: 0;
-  transform: skew(-47deg);
 }
-ion-toolbar .decoration .icon-type-user {
+ion-header ion-toolbar .decoration .icon-type-user {
   position: absolute;
-  left: 23%;
-  top: 21%;
+  left: 12%;
+  top: 16%;
   height: 1rem;
   width: 1rem;
-  transform: skew(46deg);
 }
-ion-toolbar .decoration .icon-type-user img {
+ion-header ion-toolbar .decoration .icon-type-user img {
   height: 100%;
   width: 100%;
 }
-ion-toolbar .decoration .logo-etse {
+ion-header ion-toolbar .decoration .logo-etse {
   position: absolute;
-  border: 1.5px solid #e0730a;
+  border: 1.5px solid #3e3636;
   border-radius: 50%;
   top: 9%;
-  left: -7%;
-  height: 2rem;
-  width: 2rem;
-  transform: skew(47deg);
+  left: -8%;
+  height: 1.8rem;
+  width: 1.8rem;
 }
-ion-toolbar ion-title {
+ion-header ion-toolbar ion-title {
   text-align: left;
+  -webkit-padding-start: 15px;
   padding-inline-start: 15px;
-  margin-bottom: 15px;
+  margin-top: -7%;
 }
-ion-toolbar ion-title .title {
+ion-header ion-toolbar ion-title .title {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   text-transform: uppercase;
   font-size: 12px;
 }
-ion-toolbar ion-title .subtitle {
+ion-header ion-toolbar ion-title .subtitle {
   font-size: 9px;
   font-family: raleway;
   color: white;
