commit design soirée Menu principal et debut menu lateral

--- a/src/app/VIEWS/COMPONENTS/GENERALES/menu/menu.component.css
+++ b/src/app/VIEWS/COMPONENTS/GENERALES/menu/menu.component.css
@@ -5,8 +5,37 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: white;
+  position: relative;
+  margin: 5px;
 }
-.menu-item .icon-image {
+.menu-item ion-icon {
+  width: 15rem;
+  height: 15rem;
+  color: #f96d0f1a;
+}
+.menu-item .decoration {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff5e;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+}
+.menu-item .decoration .logo-ese {
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+.menu-item .decoration .icon-image {
   width: 100%;
   height: 40%;
   display: flex;
@@ -14,14 +43,16 @@
   justify-content: center;
   align-items: center;
 }
-.menu-item .icon-image ion-icon {
+.menu-item .decoration .icon-image ion-icon {
   width: 10rem;
   height: 10rem;
-  color: blakc;
+  color: #023260;
 }
-.menu-item .name-menu {
+.menu-item .decoration .name-menu {
   width: 100%;
   text-align: center;
-  font-size: 12px;
+  font-size: 11px;
   font-family: Lato;
+  color: #f96807;
+  font-weight: bold;
 }
