--- a/src/app/VIEWS/PAGES/BASES/menu/menu.page.css
+++ b/src/app/VIEWS/PAGES/BASES/menu/menu.page.css
@@ -1,3 +1,53 @@
+ion-split-pane ion-menu .container-lateral-menu {
+  background: #221e1e;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+ion-split-pane ion-menu .container-lateral-menu .header-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  height: 7rem;
+  background: white;
+  width: 100%;
+  padding-left: 10px;
+}
+ion-split-pane ion-menu .container-lateral-menu .header-info .imageUser {
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 3px solid #221e1e;
+}
+ion-split-pane ion-menu .container-lateral-menu .header-info .infoUser {
+  padding-left: 10px;
+  height: 3.5rem;
+  width: calc(100% - 3.5rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: unset;
+}
+ion-split-pane ion-menu .container-lateral-menu .header-info .infoUser .name {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-transform: uppercase;
+  font-size: 1.3rempx;
+  color: #787575;
+}
+ion-split-pane ion-menu .container-lateral-menu .header-info .infoUser .role {
+  font-family: Lato;
+  font-size: 0.6rem;
+  font-weight: bold;
+}
+ion-split-pane ion-menu .container-lateral-menu .header-info .infoUser .email {
+  font-family: raleway;
+  font-size: 0.7rem;
+}
 .contentInformation {
   width: 100%;
   padding-top: 30px;
@@ -15,4 +65,8 @@ ion-list {
 ion-list #desconnect {
   position: fixed;
   bottom: 0;
+}
+.menu-item {
+  width: 1rem;
+  height: 1rem;
 }
