--- a/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.css
+++ b/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.css
@@ -1,4 +1,7 @@
-.container {
+ion-content {
+  --background: #3e3636;
+}
+ion-content .container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -7,28 +10,28 @@
   align-items: center;
   margin-top: 3rem;
 }
-.container .cadran-buttn {
+ion-content .container .cadran-buttn {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
-.container .cadran-buttn .cadran {
+ion-content .container .cadran-buttn .cadran {
   width: 35px;
   height: 35px;
   background: rgba(219, 211, 211, 0.932);
   margin: 0.5rem;
   padding: 6px;
 }
-.container .button-carried {
+ion-content .container .button-carried {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.container .button-carried .block-3 {
+ion-content .container .button-carried .block-3 {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -36,7 +39,7 @@
   align-items: center;
   margin-top: 5px;
 }
-.container .button-action {
+ion-content .container .button-action {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -44,6 +47,15 @@
   align-items: center;
   margin: auto;
 }
-.container .button-action ion-button {
+ion-content .container .button-action ion-button {
   width: 10rem;
+}
+ion-content .container .button {
+  background-color: #0055a4;
+  border-radius: 5px;
+  padding: 0.7rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #e2dfdf;
+  font-size: 0.8rem;
+  cursor: pointer;
 }
