--- a/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.html
+++ b/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.html
@@ -2,7 +2,10 @@
 
 <ion-content>
   <div class="container">
-      <h5>Nouveau Code PIN</h5>
+    <div class="blog-img">
+      <img src="assets/icon/logo.jpg">
+    </div>
+      <h5>Veuillez entrer votre NOuveau Code Pin </h5>
     <div class="cadran-buttn">
       <div class="cadran"><div id="checkId1"></div></div>
       <div class="cadran"><div id="checkId2"></div></div>
