--- a/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.scss
@@ -1,62 +1,108 @@
-.container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 3rem;
-    .cadran-buttn {
+ion-content {
+    --background: #3e3636;
+
+    .container {
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        .cadran {
-            width: 35px;
-            height: 35px;
-            background:  rgba(219, 211, 211, 0.932);
-            margin: 0.5rem;
-            padding: 6px;
-        }
-    }
-    .button-carried {
-        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        .block-3 {
+        position: relative;
+        padding-top: 16%;
+        h5 {
+            font-family: raleway;
+            color: white;
+        }
+
+        .blog-img {
+            width: 4rem;
+            height: 4rem;
+            border-radius: 50%;
+            overflow: hidden;
+            margin-bottom: 3%;
+            border: 3px solid darkgoldenrod;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .cadran-buttn {
+            width: 80%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            .cadran {
+                width: 30px;
+                height: 30px;
+                border-radius: 50px;
+                background: transparent;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin-right: 7px;
+                border-bottom: 2px solid #f79c46;
+                div {
+                    transition: 200ms;
+                }
+            }
+        }
+
+        .button-carried {
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 0.5rem;
+            background: #3e3636;
+            margin-top: 1px;
+            border-bottom-right-radius: 20px;
+            padding-bottom: 0.8rem;
+
+            .block-3 {
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+
+                .button-box {
+                    width: 5rem;
+                    height: 5rem;
+                    color: white;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.5rem;
+                    font-family: Lato;
+                    text-transform: uppercase;
+                    margin: 0.2rem;
+                    border-radius: 50%;
+                    background: #8e89894f;
+                }
+            }
+        }
+
+        .button-action {
             width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            margin-top: 5px;
-           
-        }
-    }
-    .button-action {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        margin: auto;
-        ion-button {
-            width: 10rem;
+            ion-button {
+                width: 10rem;
+                --background: transparent;
+                --box-shadow: none;
+                font-family: raleway;
+            }
         }
     }
 
-    
-.button{
-    background-color: #0055a4;
-    border-radius: 5px;
-    padding: 0.7rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #e2dfdf;
-    font-size: 0.8rem;
-    cursor: pointer;
 }
-}
-
