--- a/src/app/VIEWS/PAGES/BASES/menu/menu.page.html
+++ b/src/app/VIEWS/PAGES/BASES/menu/menu.page.html
@@ -13,8 +13,7 @@
       </div>
     </div>
     <ion-content>
-
-      <ion-list>
+      <ion-list class="infoUser">
         <ng-container *ngIf="addAdditionalPage">
           <ion-list-header>
             SWITCH TRANSACTION
