--- a/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.html
+++ b/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.html
@@ -102,7 +102,8 @@
         <div class="image-file">
           <img *ngIf="imagePompe" [src]="imagePompe"/>
         </div>
-        <ion-input name="imagePompe" type="file" [(ngModel)]="imagePompe"></ion-input>
+        <ion-input name="imagePompe" type="" [(ngModel)]="imagePompe"></ion-input>
+        <div class="button" (click)="selectImage()">Ajouter Photo</div>
         <ion-button (click)="processStoreConsomation()">
          <ion-icon name="checkmark"></ion-icon> ENREGISTRER
         </ion-button>
